# rust-servers-services-and-apps

./: .gitignore
ezytutors/: Cargo.toml  ezy.session.sql
ezytutors-web/tutor-web-app-ssr/: Cargo.toml
ezytutors-web/tutor-web-app-ssr/static/iter1/: index.html
ezytutors-web/tutor-web-app-ssr/static/iter3/: list.html
ezytutors-web/tutor-web-app-ssr/static/iter4/: list.html
ezytutors-web/tutor-web-service/: Cargo.toml
ezytutors-web/tutor-web-service/src/: errors.rs  routes.rs
ezytutors-web/tutor-web-service/src/db_access/: course.rs
ezytutors-web/tutor-web-service/src/dbscripts/: course.sql  tutor-course.sql
ezytutors-web/tutor-web-service/src/handlers/: course.rs
ezytutors/restClient/: ezytutors.http
ezytutors/tutor-db/: Cargo.toml
ezytutors/tutor-db/src/: db_access.rs  handlers.rs  lib.rs  models.rs  routes.rs
ezytutors/tutor-db/src/db_access/: tutor.rs
ezytutors/tutor-db/src/handlers/: tutor.rs
ezytutors/tutor-db/src/models/: course.rs  tutor.rs
ezytutors/tutor-nodb/: Cargo.toml
ezytutors/tutor-nodb/src/: handlers.rs  main.rs  models.rs  routes.rs  state.rs
scenario1/: Cargo.toml
scenario1/http/src/: httprequest.rs
scenario1/httpserver/: Cargo.toml
scenario1/httpserver/data/: orders.json
scenario1/httpserver/public/: index.html
scenario1/httpserver/src/: handler.rs  server.rs
scenario1/tcpclient/src/: main.rs
