[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# actix
actix-web = "4.5.1"
# db
sqlx = { version = "0.7.3", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
# serde
serde = { version = "1.0.196", features = ["derive"] }
# time
chrono = { version = "0.4.33", features = ["serde"] }